welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:2: error: not found: value bSMile
  if ((aSmile && bSMile) || (!aSmile && bSMile)) {
                 ^monkeyTrouble:2: error: not found: value bSMile
  if ((aSmile && bSMile) || (!aSmile && bSMile)) {
                                        ^